--- a/templates/tokens/tokens-config.j2
+++ b/templates/tokens/tokens-config.j2
@@ -5,15 +5,19 @@ metadata:
 data:
   tokens-config.json: |-
     {
-      "service_tenant_base_url": "{{universal_param["service_url"]}}",
+      "primary_site_admin_tenant_base_url": "{{universal_param["service_url"]}}",
       "service_site_id": "{{universal_param["service_site_id"]}}",
       "service_tenant_id": "{{universal_param["service_tenant_id"]}}",
-      "service_name": "{{service_param["service_name"]}}",
       "use_sk": {{ local_param["use_sk"]|default("true")|lower }},
       "log_level": "{{local_param["log_level"]|default("DEBUG")}}",
       "tenants": {{local_param["tenants"]|default(["dev", "admin"])|tojson}},
       "show_traceback": {{local_param["show_traceback"]|default("false")|lower}},
       "use_allservices_password": {{local_param["use_allservices_password"]|default("false")|lower}},
-      "allservices_password": {{local_param["allservices_password"]}},
-      "dev_jwt_private_key": {{local_param["dev_jwt_private_key"]}}
+      {% if local_param["allservices_password"]%}
+      "allservices_password": "{{local_param["allservices_password"]}}",
+      {% endif %}
+      {% if local_param["dev_jwt_private_key"]%}
+      "dev_jwt_private_key": "{{local_param["dev_jwt_private_key"]}}",
+      {% endif %}
+      "service_name": "{{service_param["service_name"]}}"
     }
