minor fixes for pvc

--- a/templates/input_template.j2
+++ b/templates/input_template.j2
@@ -758,6 +758,10 @@ streams:
       file_ext: ".yml"
       template: "pvc.j2"
       data:
+    kapacitor:
+      file_ext: ".conf"
+      template: "kapacitor.j2"
+      data:
   mysql:
     deploy:
       file_ext: ".yml"
