--- a/templates/actors/api/metrics.j2
+++ b/templates/actors/api/metrics.j2
@@ -15,6 +15,9 @@ spec:
       containers:
       - name: actors-metrics
         image: abaco/core-v3:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]|default(defaults["image_version"])))}}
+        {% if local_param["image_pull"]%}
+        imagePullPolicy: Always
+        {% endif %}
         ports:
         - name: flask
           containerPort: 5000
