--- a/templates/actors/api/rabbit.j2
+++ b/templates/actors/api/rabbit.j2
@@ -26,7 +26,7 @@ spec:
         - name: RABBITMQ_SERVER_ADDITIONAL_ERL_ARGS
           value: "+A 128"
         - name: RABBITMQ_DEFAULT_USER
-          value: "admin"
+          value: admin
         - name: RABBITMQ_DEFAULT_PASS
           valueFrom:
             secretKeyRef:
