--- a/templates/input_template.j2
+++ b/templates/input_template.j2
@@ -36,11 +36,11 @@ universal-parameters:
 
 actors:
   service-parameters:
-      data:
-        service_name: "actors"
-        rabbit_pvc: "actors-rabbitmq-vol02"
-        mongo_pvc: "actors-mongo-vol02"
-        mongo_backup_pvc: "actors-mongo-backup-vol02"
+    data:
+      service_name: "actors"
+      rabbit_pvc: "actors-rabbitmq-vol02"
+      mongo_pvc: "actors-mongo-vol02"
+      mongo_backup_pvc: "actors-mongo-backup-vol02"
   actors-config:
     file_ext: ".yml"
     template: actors-config.j2
@@ -59,7 +59,7 @@ actors:
       file_ext: ".yml"
       template: admin.j2
       data:
-        image_pull: null
+        image_pull: null 
     configmap:
       file_ext: ".yml"
       template: configmap.j2
@@ -134,7 +134,6 @@ admin:
       nginx_server_name: "~^(?<user>.+)\.test\.tapis\.io$;"
       nginx_cert_file: "$HOME/cert.pem"
       nginx_key_file: "$HOME/ssl/key.key"
-
   admin-config:
     file_ext: ".yml"
     template: admin-config.j2
@@ -143,6 +142,19 @@ admin:
     file_ext: ""
     template: "tapischex.j2"
     data:
+  site-router:
+    api:
+      file_ext: ".yml"
+      template: "api.j2"
+      data:
+    pvc:
+      file_ext: ".yml"
+      template: "pvc.j2"
+      data:
+    site-router-config:
+      file_ext: ".yml"
+      template: "site-router-config.j2"
+      data:
   nginx:
     burnup:
       file_ext: ""
@@ -169,7 +181,6 @@ admin:
       file_ext: ""
       template: "tokens-test.j2"
       data:
-        
 
 apps:
   service-parameters:
@@ -700,24 +711,6 @@ skadmin:
       template: run-sk-admin2.j2
       data:
 
-service-router:
-  service-parameters:
-    data:
-      service_name: "site-router"
-      service_router_pvc: "site-router-redis-vol1"
-  api:
-    api:
-      file_ext: ".yml"
-      template: api.j2
-      data:
-    pvc:
-      file_ext: ".yml"
-      template: pvc.j2
-      data:
-    site-router-config:
-      file_ext: ".yml"
-      template: site-router-config.j2
-      data:
 
 streams:
   service-parameters:
