--- a/templates/admin/nginx/burnup.j2
+++ b/templates/admin/nginx/burnup.j2
@@ -3,5 +3,4 @@
 kubectl create secret tls tapis-tls-cert --cert={{service_param["nginx_cert_file"]}} --key={{service_param["nginx_key_file"]}}
 kubectl apply -f service.yml
 
-kubectl create configmap tapis-nginx-config --from-file=tapis-nginx.conf
-kubectl apply -f deploy.yml 
+kubectl create configmap tapis-nginx-config --from-file=nginx.con
