--- a/templates/input_template.j2
+++ b/templates/input_template.j2
@@ -17,7 +17,7 @@ services:
   - skadmin
   - streams
   - systems
-  - tenants-api
+  - tenants
   - tokens
   - vault
 
@@ -760,6 +760,15 @@ streams:
       file_ext: ".yml"
       template: "pvc.j2"
       data:
+  influx2:
+    deploy:
+      file_ext: ".yml"
+      template: "deploy.j2"
+      data:
+    pvc:
+      file_ext: ".yml"
+      template: "pvc.j2"
+      data:
   kapacitor:
     pvc:
       file_ext: ".yml"
@@ -807,7 +816,7 @@ systems:
       template: "pvc.j2"
       data:
 
-tenants-api:
+tenants:
   service-parameters:
     data:
       service_name: "tenants"
