--- a/templates/skadmin/initialLoad/tapis-tokens-secrets.j2
+++ b/templates/skadmin/initialLoad/tapis-tokens-secrets.j2
@@ -1,14 +1,16 @@
 {
     "secrets": {
         "jwtsigning":[
+            {% for tenant in local_param["tenants"]%}
             {
-                "tenant":     "admin",
+                "tenant":     "{{tenant}}",
                 "user":       "bozo",
                 "secretName": "keys",
                 "privateKey": "<generate-secret>",
                 "kubeSecretName": "tapis-tokens-secrets",
                 "kubeSecretKey":  "admin-privatekey"
-            }
+            }{%-if not loop.last-%},{% endif %}
+            {% endfor%}
         ]
     }
 }
