--- a/templates/pgrest/api-service.j2
+++ b/templates/pgrest/api-service.j2
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:  
-  name: {{local_param["service_name"]}}
+  name: pgrest-api
 spec:
   type: NodePort
   selector:    
