--- a/templates/pgrest/pgrest-config.j2
+++ b/templates/pgrest/pgrest-config.j2
@@ -10,7 +10,7 @@ data:
       "site_id": "{{universal_param["service_site_id"]}}",
       "service_name": "{{service_param["service_name"]}}",
       "service_tenant_base_url": "{{universal_param["service_url"]}}",
-      "tenants": {{universal_param["tenants"]|default(["dev", "admin"])|tojson}},
+      "tenants": {{local_param["tenants"]|default(service_param["tenants"]|default(universal_param["tenants"]|default(["dev", "admin"])))|tojson}},
       "log_level": "DEBUG",
       "show_traceback": false,
       "databases": {
