--- a/templates/security/api/api.j2
+++ b/templates/security/api/api.j2
@@ -17,7 +17,7 @@ spec:
       initContainers:
       {% if local_param["renew_sk"]%}
       - name: renew-sk-secret
-        command: ["/tmp/renew-sk-secret"]
+        command: ["/tmp/renew-sk-secret-script"]
         #command: ["sleep","3600"]
         image: mrghort/skadminutil:latest
         imagePullPolicy: Always
@@ -29,8 +29,8 @@ spec:
               key: vault-token
         volumeMounts:
         - name: renew-sk-secret
-          mountPath: /tmp/renew-sk-secret
-          subPath: renew-sk-secret
+          mountPath: /tmp/renew-sk-secret-script
+          subPath: renew-sk-secret-script
       {% endif %}
       containers:
       - name: sk-api
