--- a/templates/skadmin/renew-sk-secret/renew-sk-secret.j2
+++ b/templates/skadmin/renew-sk-secret/renew-sk-secret.j2
@@ -10,7 +10,7 @@ spec:
       restartPolicy: Never
       containers:
       - name: renew-sk-secret
-        command: ["/tmp/renew-sk-secret"]
+        command: ["/tmp/renew-sk-secret-script"]
         #command: ["sleep","3600"]
         image: mrghort/skadminutil:latest
         {% if local_param["image_pull"]%}
@@ -24,8 +24,8 @@ spec:
               key: vault-token
         volumeMounts:
         - name: renew-sk-secret
-          mountPath: /tmp/renew-sk-secret
-          subPath: renew-sk-secret
+          mountPath: /tmp/renew-sk-secret-script
+          subPath: renew-sk-secret-script
       volumes:
       - name: renew-sk-secret
         configMap:
