--- a/templates/skadmin/initialLoad/tapis-tokens-secrets.j2
+++ b/templates/skadmin/initialLoad/tapis-tokens-secrets.j2
@@ -8,7 +8,7 @@
                 "secretName": "keys",
                 "privateKey": "<generate-secret>",
                 "kubeSecretName": "tapis-tokens-secrets",
-                "kubeSecretKey":  "admin-privatekey"
+                "kubeSecretKey":  "{{tenant}}-privatekey"
             }{%-if not loop.last-%},{% endif %}
             {% endfor%}
         ]
