--- a/templates/notifications/workers.j2
+++ b/templates/notifications/workers.j2
@@ -28,17 +28,17 @@ spec:
             - name: TOKENS_SERVICE_URL
               valueFrom:
                 configMapKeyRef:
-                  name: global-config
+                  name: notifications-config
                   key: service_tenant_base_url
             - name: TENANTS_SERVICE_URL
               valueFrom:
                 configMapKeyRef:
-                  name: global-config
+                  name: notifications-config
                   key: service_tenant_base_url
             - name: TAPIS_SITE_ID
               valueFrom:
                 configMapKeyRef:
-                  name: global-config
+                  name: notifications-config
                   key: siteId
             - name: RABBITMQ_PASSWORD
               valueFrom:
