--- a/templates/notifications/api.j2
+++ b/templates/notifications/api.j2
@@ -35,17 +35,17 @@ spec:
         - name: TAPIS_SITE_ID
           valueFrom:
             configMapKeyRef:
-              name: global-config
+              name: notifications-config
               key: siteId
         - name: TOKENS_SERVICE_URL
           valueFrom:
             configMapKeyRef:
-              name: global-config
+              name: notifications-config
               key: service_tenant_base_url
         - name: TENANTS_SERVICE_URL
           valueFrom:
             configMapKeyRef:
-              name: global-config
+              name: notifications-config
               key: service_tenant_base_url
         - name: RABBITMQ_PASSWORD
           valueFrom:
