--- a/templates/authenticator/authenticator-config.j2
+++ b/templates/authenticator/authenticator-config.j2
@@ -7,10 +7,14 @@ data:
   LDAP_ORGANISATION: Tapis
   authenticator-config.json: |-
     {
-      "primary_site_admin_tenant_base_url":"{{universal_param["service_url"]}}",
+      "primary_site_admin_tenant_base_url": "{{universal_param["service_url"]}}",
       "service_site_id": "{{universal_param["service_site_id"]}}",
       "service_tenant_id": "{{universal_param["service_tenant_id"]}}",
       "service_name": "{{service_param["service_name"]}}",
       "tenants": {{universal_param["tenants"]|default(["dev", "admin"])|tojson}},
-      "sql_db_url": "authenticator-postgres:5432/authenticator"
+      "sql_db_url": "authenticator-postgres:5432/authenticator",
+      "log_level": {{service_param["log_level"]|default(defaults["log_level"])}}
     }
+
+
+
