--- a/templates/authenticator/authenticator-config.j2
+++ b/templates/authenticator/authenticator-config.j2
@@ -13,7 +13,7 @@ data:
       "service_name": "{{service_param["service_name"]}}",
       "tenants": {{universal_param["tenants"]|default(["dev", "admin"])|tojson}},
       "sql_db_url": "authenticator-postgres:5432/authenticator",
-      "log_level": {{service_param["log_level"]|default(defaults["log_level"])}}
+      "log_level": "{{service_param["log_level"]|default(defaults["log_level"])}}"
     }
 
 
