--- a/templates/tokens/tokens-config.j2
+++ b/templates/tokens/tokens-config.j2
@@ -8,11 +8,11 @@ data:
       "primary_site_admin_tenant_base_url": "{{universal_param["service_url"]}}",
       "service_site_id": "{{universal_param["service_site_id"]}}",
       "service_tenant_id": "{{universal_param["service_tenant_id"]}}",
-      "use_sk": {{ local_param["use_sk"]|default("true")|lower }},
+      "use_sk": {{ local_param["use_sk"]|default(defaults["use_sk"])|tojson }},
       "log_level": "{{local_param["log_level"]|default("DEBUG")}}",
       "tenants": {{universal_param["tenants"]|default(["dev", "admin"])|tojson}},
-      "show_traceback": {{local_param["show_traceback"]|default("false")|lower}},
-      "use_allservices_password": {{local_param["use_allservices_password"]|default("false")|lower}},
+      "show_traceback": {{local_param["show_traceback"]|default("false")|tojson}},
+      "use_allservices_password": {{local_param["use_allservices_password"]|default("false")|tojson}},
       {% if local_param["allservices_password"]%}
       "allservices_password": "{{local_param["allservices_password"]}}",
       {% endif %}
