--- a/templates/burnup.j2
+++ b/templates/burnup.j2
@@ -31,6 +31,7 @@ init(){
     echo "vault:"
     cd $here/vault 
     ./burnup
+    kubectl wait --for=condition=available deploy/vault
     ./unseal
     {% endif%}
 
